# idol-benchmark-gap

./: .gitignore  CMakeLists.txt  GAP.render.html  README.md  build.sh  fail_highs.lp  fails.txt  gmon.out  run.sh  run_all.sh  run_coluna.sh  run_idol.sh  run_local_idol.sh  unzip.sh
.github/workflows/: benchmark.yml  cmake.txt  cmake.yml  new_workflow.yml
GAP/: CMakeLists.txt  report.render.Rmd
GAP/coluna/: main.jl
GAP/data/: README.MD
GAP/data/dummies/: dummy
GAP/data/n10/: instance_n10_100__0.txt  instance_n10_100__1.txt  instance_n10_100__10.txt  instance_n10_100__11.txt  instance_n10_100__12.txt  instance_n10_100__13.txt  instance_n10_100__14.txt  instance_n10_100__15.txt  instance_n10_100__16.txt  instance_n10_100__17.txt  instance_n10_100__18.txt  instance_n10_100__19.txt  instance_n10_100__2.txt  instance_n10_100__3.txt  instance_n10_100__4.txt  instance_n10_100__5.txt  instance_n10_100__6.txt  instance_n10_100__7.txt  instance_n10_100__8.txt  instance_n10_100__9.txt  instance_n10_200__0.txt  instance_n10_200__1.txt  instance_n10_200__10.txt  instance_n10_200__11.txt  instance_n10_200__12.txt  instance_n10_200__13.txt  instance_n10_200__14.txt  instance_n10_200__15.txt  instance_n10_200__16.txt  instance_n10_200__17.txt  instance_n10_200__18.txt  instance_n10_200__19.txt  instance_n10_200__2.txt  instance_n10_200__3.txt  instance_n10_200__4.txt  instance_n10_200__5.txt  instance_n10_200__6.txt  (+3 more)
GAP/idol/: CMakeLists.txt  main.cpp  make_model.h  solve_with_branch_and_bound.h  solve_with_branch_and_price.h  solve_with_glpk.h  write_to_file.h
GAP/instance_generator/: CMakeLists.txt  generate_main.cpp
reports/: GAP.render.Rmd
(+193 files in other folders)
